--- a/app/src/main/res/layout/activity_start_new_sensor.xml
+++ b/app/src/main/res/layout/activity_start_new_sensor.xml
@@ -1,19 +1,88 @@
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/drawer_layout"
-    android:layout_width="match_parent" android:layout_height="match_parent"
-    tools:context="com.eveningoutpost.dexdrip.Home">
+<?xml version="1.0" encoding="utf-8"?>
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
+    <data>
+        <variable name="collection_type" type="com.eveningoutpost.dexdrip.utils.DexCollectionType"/>
+    </data>
+    <android.support.v4.widget.DrawerLayout
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/drawer_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context="com.eveningoutpost.dexdrip.StartNewSensor">
 
-    <ScrollView
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:gravity="center_horizontal"
-        android:id="@+id/scrollView4" >
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="fill_parent"
+            android:orientation="vertical"
             android:gravity="center_horizontal"
-            android:weightSum="1">
+            android:paddingHorizontal="@dimen/activity_horizontal_margin"
+            android:paddingVertical="@dimen/activity_vertical_margin"
+            android:id="@+id/scrollView4" >
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="0">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:text="@string/data_source_is_set_to_"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Title"/>
+                <TextView
+                    android:id="@+id/data_source"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_horizontal"
+                    android:text="@{collection_type.getBestCollectorHardwareName(), default=Unknown}"
+                    android:padding="5dp"
+                    android:textColor="@color/darker_white"
+                    android:textAppearance="?android:attr/textAppearanceMedium"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/dexcom_transmitter"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="0">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:text="@string/dexcom_transmitter_id"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Title"/>
+                <Button
+                    android:id="@+id/transmitter_id_button"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text='ABCDEF'
+                    android:padding="5dp"
+                    android:gravity="center"
+                    android:onClick="editID"
+                    android:textColor="@android:color/white"
+                    android:drawableTop="@drawable/ic_g6_transmitter"
+                    android:background="@drawable/faint_button_background"
+                    android:hapticFeedbackEnabled="true"
+                    android:alpha=".8"
+                    android:layout_gravity="center_horizontal"
+                    android:textAppearance="?android:attr/textAppearanceLarge"/>
+
+            </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="30"/>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1pt"
+                android:background="?android:attr/listDivider"/>
 
             <TextView
                 android:layout_width="match_parent"
@@ -22,27 +91,37 @@
                 android:text="@string/do_not_hit_start_long"
                 android:id="@+id/textView"
                 android:layout_marginTop="10dp"
-                android:gravity="center_horizontal"
-                android:textSize="20sp"
-                android:layout_weight="0.68"
-                android:paddingRight="10dp"
-                android:paddingLeft="10dp"
-                android:paddingTop="10dp" />
+                android:gravity="center"
+                app:autoSizeTextType="uniform"
+                app:autoSizeMinTextSize="10sp"
+                app:autoSizeMaxTextSize="30sp"
+                android:layout_weight="5" />
 
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/start_sensor"
                 android:id="@+id/startNewSensor"
-                android:layout_marginTop="15dp" />
+                android:layout_marginVertical="10dp"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:layout_weight="0"/>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1pt"
+                android:background="?android:attr/listDivider"/>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="40"/>
         </LinearLayout>
-    </ScrollView>
 
-    <fragment android:id="@+id/navigation_drawer"
-        android:layout_width="@dimen/navigation_drawer_width" android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:name="com.eveningoutpost.dexdrip.NavigationDrawerFragment"
-        tools:layout="@layout/fragment_navigation_drawer" />
+        <fragment android:id="@+id/navigation_drawer"
+            android:layout_width="@dimen/navigation_drawer_width" android:layout_height="match_parent"
+            android:layout_gravity="start"
+            android:name="com.eveningoutpost.dexdrip.NavigationDrawerFragment"
+            tools:layout="@layout/fragment_navigation_drawer" />
 
-</android.support.v4.widget.DrawerLayout>
-
+    </android.support.v4.widget.DrawerLayout>
+</layout>
