--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,8 @@
     <color name="title">#62a262</color>
     <color name="yellow100">#fff9c4</color>
     <color name="darker_white">#d3d3d3</color>
+    
+    <color name="faint_button_bg_pressed">#8f777777</color>
+    <color name="faint_button_bg_focussed">#55777777</color>
+    <color name="faint_button_bg">#13777777</color>
 </resources>
